tests/baselines/reference/asyncFunctionExpression7.errors.txt
tests/cases/conformance/async/downlevel/asyncFunctionExpression/asyncFunctionExpression7.ts(8,38): error TS1109: Expression expected.


==== tests/cases/conformance/async/downlevel/asyncFunctionExpression/asyncFunctionExpression7.ts (1 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    var bar = async function (): Promise<void> {
      // 'await' here is an identifier, and not an await expression.
      var foo = async function (a = await): Promise<void> {
                                         ~
!!! error TS1109: Expression expected.
      }
    }